Fixed a line of code I forgot for maintenance box
added max-width, so didn't look odd when at higher res/larger screen
size.

--- a/WebsiteFiles/3.1/css/main.css
+++ b/WebsiteFiles/3.1/css/main.css
@@ -13,6 +13,7 @@
     width: 45%;
     min-height: 100px;
     min-width: 400px;
+    max-width: 500px;
     border: 5px solid red;
     margin-top: 1.5em;
     margin-bottom: 1.5em;
